# dlgo

./: CMakeLists.txt  LICENSE.txt  README.md
nn/nine/: conv_4x64.py
scripts/: run_training.sh
src/: agent_base.h  agent_helpers.cpp  agent_helpers.h  agent_naive.cpp  agent_naive.h  alphabeta.cpp  alphabeta.h  bot_v_bot.cpp  eval.cpp  eval.h  frozenset.h  goboard.cpp  goboard.h  goboard_slow.cpp  goboard_slow.h  gotypes.cpp  gotypes.h  hash.h  human_v_bot.cpp  matchup.cpp  mcts.cpp  mcts.h  myrand.cpp  myrand.h  scoring.cpp  scoring.h  simulation.cpp  simulation.h  test.cpp  utils.cpp  utils.h  zero_sim.cpp
src/gtp/: command.h  frontend.h  gtp_board.cpp  gtp_board.h  gtp_main.cpp  handlers.h  response.h
src/zero/: agent_zero.cpp  agent_zero.h  dihedral.h  encoder.cpp  encoder.h  experience.cpp  experience.h
train/: data.py  dihedral.py  test_dihedral.py  train.py
